--- a/views/partials/window_personal.ejs
+++ b/views/partials/window_personal.ejs
@@ -1,6 +1,10 @@
-<%- include('./window_head', {window_head: ''}) %>  
-<%- include('./window_aside_bottom', {window_a_b: ''}) %> 
 <%= window_personal %>
+
+<%- include('./window_head', {window_head: '',window_type:window_type}) %>  
+
+<%- include('./window_aside_bottom', {window_a_b: ''}) %> 
+
+
 <section class="window_content">
     
         <div class="profile">
