--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,9 +6,10 @@
     <ul class="desktop_items">
 
       <li><button href="#"> <img src="images/icon/839.ico" alt=""><div><p>home</p></div></button></li>
-      <li><button popovertarget="personal" popovertargetaction="show" > <img src="images/chris icon lowlowres.png" alt=""><div><p>personal</p></div></button></li>
-      <li><button popovertarget="music" > <img src="images/icon/1221.ico" alt=""><div><p>Music</p></div></button></li>
-      <li><button popovertarget="sprint" popovertargetaction="show" > <img src="images/icon/1224.ico" alt=""><div><p>sprint</p></div></button></li>
+      <li><button popovertarget="personal" popovertargetaction="show" > <img src="images/chris icon lowlowres.png" alt="personal card icon"><div><p><%= nickname%></p></div></button></li>
+      <li><button popovertarget="music" > <img src="images/icon/1221.ico" alt="music icon"><div><p>Music</p></div></button></li>
+      <li><button popovertarget="sprint" popovertargetaction="show" > <img src="images/icon/1224.ico" alt="sprint icon"><div><p>sprint</p></div></button></li>
+      <li><button popovertarget="game" popovertargetaction="show" > <img src="/images/tumblr_b08776446c99e97ddb6379663d96b2ab_f289af9d_541.png" alt="game icon"><div><p>squad-game</p></div></button></li>
       <li><button><a href="<%= website %>"><img src="images/github.png" sizes="80" alt=""><div><p>github</p></div></a></button></li>
       
     </ul>
@@ -16,7 +17,7 @@
     <div class="trash_can"><a href="#"> <img src="images/icon/261.ico" alt=""></a></div>
 
          
-      <div popover="manual" id="personal" class="window_card" >
+      <div popover id="personal" class="window_card" >
         <%- include('./partials/window_personal', {window_personal: '',window_type:'personal'}) %> 
       </div>
 
@@ -28,6 +29,12 @@
         <%- include('./partials/window_music', {window_music: '',window_type:'music'}) %> 
       </div>
 
+      <div popover="manual" id="game" class="window_card" >
+        <%- include('./partials/window_game', {window_game: '',window_type:'game'}) %> 
+      </div>
+
+
+      <!-- start button menu -->
     <div popover id="start_menu">
       <header class="start_bar_header">
         <img src="<%= avatar %>" alt="header avatar">
@@ -42,6 +49,7 @@
           <li><a href="<%= website %>"><img src="images/github.png" sizes="80" alt=""><div><p>github</p></div></a></li>
     
         </menu>
+
         <menu class="other_icon">
           <li>
             <img src="" alt="">
@@ -86,9 +94,9 @@
       <div class="bar"></div>
       <div class="extra_icons">
         <ul>
-          <li><button class="window_theme"><img src="images/icon/1005.ico" alt="theme icon"></button></li>
-          <li><a href="#"><img src="images/icon/975.ico" alt=""> </a></li>
-          <li><a href="#"><img src="images/icon/952.ico" alt=""> </a></li>
+          <li><button class="window_theme"><img src="images/icon/1005.ico" alt="theme button"></button></li>
+          <li><a href="#"><img src="images/icon/975.ico" alt="info button"> </a></li>
+          <li><a href="#"><img src="images/icon/952.ico" alt="internet icon"> </a></li>
           <li><p class="current_T">11:11</p></li>
         </ul>
 
