--- a/views/partials/window_aside_bottom.ejs
+++ b/views/partials/window_aside_bottom.ejs
@@ -10,7 +10,7 @@
         <p>more file</p>
         <li><img src="images/icon/1348.ico" alt=""><span>file</span></li>
         <li><img src="images/icon/1084.ico" alt=""><span>file</span></li>
-        <li><img src="images/icon/1005.ico" alt=""><span>file</span></li>
+        <li><button class="window_theme"><img src="images/icon/1005.ico" alt="theme button"></button><span>theme</span></li>
         <li><img src="/images/icon/975.ico" alt=""><span>file</span></li>
         
     </ul>
