--- a/views/partials/window_head.ejs
+++ b/views/partials/window_head.ejs
@@ -1,7 +1,7 @@
 <%= window_head %>
 <header class="window_header">
     <div class="blue_bar">
-        <span><%= window_type %></span>
+        <span><%= window_type %> : <%= nickname%></span>
         <ul>
             <li  title="Min">__</li>
             <!-- <li title="Max"></li> -->
