--- a/views/partials/window_personal.ejs
+++ b/views/partials/window_personal.ejs
@@ -8,6 +8,7 @@
 <section class="window_content">
     
         <div class="profile">
+            <img class="profile_bg" src="<%= avatar %>" alt="profile background image" >
             <div><img src="<%= avatar %>" alt="avatar"></div>
             <h2><%= name %></h2>
             <h3><%= surname  %></h3>
@@ -16,8 +17,7 @@
         <div class="info">
             <ul>
                 <li><a href=<%= website %>>Github</a></li>
-                <li><legend>e-mail</legend><p><%= email %></p></li>
-                <li><legend>phone number</legend><p><%= phone_number %></p></li>
+                
                 <li><legend> squad-id</legend><p><%= squad_id %></p></li>
             </ul>
         </div>
