--- a/views/partials/window_game.ejs
+++ b/views/partials/window_game.ejs
@@ -4,9 +4,30 @@
 
 <%- include('./window_aside_bottom', {window_a_b: ''}) %> 
 <section class="window_content">
-    
+    <!-- <ul class="intro_screen">
+        <li class="intro_s_game">
+            <h1>the game</h1>
+            <button class="intro_start_btn"></button>
+            <details><p>the description </p></details>
+        </li>
+        <li class="start_s_squad">
+            <h1>the squad</h1>
+            <button class="to_squad"></button>
+        </li>
+
+    </ul> -->
         
    
-
+    <a class="fullscreen_btn">
+        <input type="checkbox" id="full_b">
+        <!-- max -->
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrows-maximize" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M16 4l4 0l0 4" /><path d="M14 10l6 -6" /><path d="M8 20l-4 0l0 -4" /><path d="M4 20l6 -6" /><path d="M16 20l4 0l0 -4" /><path d="M14 14l6 6" /><path d="M8 4l-4 0l0 4" /><path d="M4 4l6 6" /></svg>
+        
+        
+        <!-- min -->
+        <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-arrows-minimize" width="24" height="24" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M5 9l4 0l0 -4" /><path d="M3 3l6 6" /><path d="M5 15l4 0l0 4" /><path d="M3 21l6 -6" /><path d="M19 9l-4 0l0 -4" /><path d="M15 9l6 -6" /><path d="M19 15l-4 0l0 4" /><path d="M15 15l6 6" /></svg>
+        
+        
+    </a>
 
 </section>
