--- a/views/partials/window_game.ejs
+++ b/views/partials/window_game.ejs
@@ -4,18 +4,19 @@
 
 <%- include('./window_aside_bottom', {window_a_b: ''}) %> 
 <section class="window_content">
-    <!-- <ul class="intro_screen">
+    <ul class="intro_screen">
         <li class="intro_s_game">
             <h1>the game</h1>
-            <button class="intro_start_btn"></button>
-            <details><p>the description </p></details>
+            <button class="intro_start_btn"> Let's play</button>
+            <p>the description </p>
         </li>
-        <li class="start_s_squad">
+        <li class="intro_s_squad">
             <h1>the squad</h1>
-            <button class="to_squad"></button>
+            <button popovertarget="squad" popovertargetaction="show" class="to_squad">Let's go</button>
+            <p>the description </p>
         </li>
 
-    </ul> -->
+    </ul>
         
    
     <a class="fullscreen_btn">
