--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -186,6 +186,7 @@ body {
   height: 100dvh;
   scrollbar-gutter: stable both-edges;
   background-color: var(--base-w);
+  overflow: hidden;
   backdrop-filter: blur(100px) brightness(1) opacity(4);
   transition: 1s;
   /* container-type: inline-size; */
@@ -352,11 +353,11 @@ body .screen:has(:hover,:focus,:active) {
 
 .window_card{
   position: absolute;
-  /* top: calc(var(--y, 0) * .98px);
-  left: calc(var(--x, 0) * 1px); */
+  top: calc(var(--y, 0) * .98px);
+  left: calc(var(--x, 0) * 1px);
   width: 50cqi;
-  top: 3rem;
-  right: 3rem;
+  /* top: 3rem;
+  right: 3rem; */
   
   
   background-color: aliceblue;
@@ -483,7 +484,7 @@ body .screen:has(:hover,:focus,:active) {
 
 }
 
-/* window side-bar */
+/*** window side-bar */
 .file_explorer{
   grid-area: b;
   width: 100%;
@@ -535,7 +536,7 @@ body .screen:has(:hover,:focus,:active) {
 
 }
 
-/* layout window content */
+/*** layout window content */
 .window_content {
   grid-area: c;
   width: 100%;
@@ -543,12 +544,14 @@ body .screen:has(:hover,:focus,:active) {
   padding-top: 2%;
 }
 
-/* user information */
+/*** user information window */
 #personal {
   /* position:absolute; */
   /* inset: 10cqi; */
   top: 10cqi ;
   left: 37cqi;
+  /* top: calc(var(--y, 0) * .98px);
+  left: calc(var(--x, 0) * 1px);   */
   width: 52cqi;
   height: auto;
   aspect-ratio: 16/9;
@@ -675,7 +678,7 @@ body .screen:has(:hover,:focus,:active) {
   }
 }
 
-/* school window */
+/*** school window */
 #sprint {
   top:2cqi ;
   left: 1cqi;
@@ -695,7 +698,7 @@ body .screen:has(:hover,:focus,:active) {
   }
 }
 
-/* music window */
+/*** music window */
 #music{
 
   top:25cqi ;
@@ -724,15 +727,15 @@ body .screen:has(:hover,:focus,:active) {
   }
 }
 
+/*** game window */
 #game{
-
   
   .window_content{
     scrollbar-gutter: stable;
     padding-top: 0%;
     height: auto;
     color: var(--base-Text-b);
-
+    overflow: scroll;
     container-name:window_game ;
     container-type:inline-size ;
   }
@@ -741,7 +744,7 @@ body .screen:has(:hover,:focus,:active) {
     position: absolute;
     bottom: 2%;
     right: 2%;
-
+    z-index: 5;
     width: 2rem;
     aspect-ratio: 1;
     border:2px solid ;
@@ -766,6 +769,50 @@ body .screen:has(:hover,:focus,:active) {
       display: none;
     }
   }
+
+  .intro_screen{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction:column;
+    height: 100%;
+    
+    >li{
+      display: flex;
+      flex-direction: column;
+      gap: 10%;
+      border-radius: var(--g-c);
+      >:is(h1,h2,p,button){
+        margin-inline:auto;
+        text-align: center;
+      }
+
+	h1{
+		margin-top: 3% ;
+		font-size: 4rem;
+	}
+
+      button{
+        border: 3px solid var(--base-b);
+        padding-inline: 3rem;
+        padding-block: 3% ;
+
+
+      }
+    }
+  }
+
+  .intro_s_game{
+    background-color: red ;
+    width: 100%;
+    height: 50%;
+  }
+
+  .intro_s_squad{
+    background-color: #118fe8;
+    width: 100%;
+    height: 50%;
+  }
 }
 
 #game:has(.fullscreen_btn>input:checked){
@@ -783,7 +830,7 @@ body .screen:has(:hover,:focus,:active) {
       }
   .window_content{
       width: 100%;
-      height: 100%;
+      /* height: 100%; */
       grid-row: 1/-1;
       margin-top: var(--top-height);
   }
@@ -814,6 +861,42 @@ body .screen:has(:hover,:focus,:active) {
       display: none;
     }
   }
+
+  .intro_screen{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    >li{height: 100%;}
+  }
+
+  .intro_s_game{
+    background-color: red ;
+    width: 50%;
+  }
+
+  .intro_s_squad{
+    background-color: #118fe8;
+    width: 50%;
+  }
+}
+
+/*** squad window */
+#squad{
+
+
+	.window_content{
+		padding: 0;
+		margin: 0;
+		grid-area: c;
+		width: 100%;
+		overflow: hidden;
+		height: 70cqh;
+
+		/* display: grid;
+ grid-template-columns: repeat(auto,minmax(0px,min-content)); */
+	  }
+
+ 
 }
 
 /* taskbar elements */
